@@ -2,6 +2,8 @@ ruby-defaults (1:1.9.3.4) UNRELEASED; urgency=medium
 
   * ruby-all-dev: also depend on the actualy interpreters and not only on the
     -dev packages
+  * ruby-all-dev: ship library with data about supported interpreters
+    - ruby_debian_dev.rb will be be used by gem2deb
 
  -- Antonio Terceiro <terceiro@debian.org>  Wed, 12 Feb 2014 09:18:18 -0300
 
